updating jupyter notebooks

--- a/notebooks/plot_fit_params/plot_prf_params.ipynb
+++ b/notebooks/plot_fit_params/plot_prf_params.ipynb
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "12fc576d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "skip_inds = [4,5,7,11,12, 19,20, 22, 24]\n",
-    "roi_def = roi_utils.multi_subject_roi_def(subjects, skip_areas=skip_inds)\n",
+    "# skip_inds = [4,5,7,11,12, 19,20, 22, 24]\n",
+    "roi_def = roi_utils.multi_subject_roi_def(subjects)\n",
     "roi_names =roi_def.roi_names\n",
     "n_rois = roi_def.n_rois"
    ]
@@ -125,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "df24386e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# loading pRF parameters from independent mapping task data\n",
     "\n",
-    "from utils import nsd_utils\n",
+    "from utils import nsd_utils, prf_utils\n",
     "\n",
     "angle_mapping = []\n",
     "eccen_mapping = []\n",
@@ -156,6 +156,27 @@
     "rsq_mapping = np.concatenate(rsq_mapping)\n",
     "\n",
     "x_mapping, y_mapping = prf_utils.pol_to_cart(angle_mapping, eccen_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0b25b742-6370-4a45-bf9d-33f020002848",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-10.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(rsq_mapping)"
    ]
   },
   {
